# space-stellar

./: .gitattributes  .gitignore  .gitignore.example  Cargo.toml  GIT_FILTER.md  README.md  environments.toml  package-lock.json  package.json  scaffold.config.js
.config/stellar/contract-ids/: space-stellar-nft-instance.json
.config/stellar/identity/: me.toml  testnet.toml  testpfp.toml
backend/: package-lock.json  package.json  server.js
backend/game/: GameStateManager.js
backend/routes/: game.js  ipfs.js  matches.js  multiplayer.js  pfp.js  points.js  rooms.js  ships.js  users.js
backend/scripts/: auto-migrate.js  migrate-add-points.js  migrate-add-ready-status.js  migrate-add-room-mode.js  migrate-add-user-id.js  migrate.js  setup-database.js
backend/utils/: getContractOwner.js  pfpContract.js
contracts/: Cargo.toml  README.md  package.json
contracts/space_stellar_nft/: Cargo.toml
contracts/space_stellar_nft/src/: lib.rs  test.rs
contracts/space_stellar_pfp/: Cargo.toml
contracts/space_stellar_pfp/src/: lib.rs
contracts/src/: lib.rs
frontend/: .vercelignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/game-assets/enemies/: LOKASI_FOLDER.txt
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ClaimRewardModal.css  ClaimRewardModal.tsx  EditProfileModal.css  EditProfileModal.tsx  EventMission.css  EventMission.tsx  GameSpaceBackground.css  GameSpaceBackground.tsx  IDCard.css  IDCard.tsx  JoinRoomModal.css  JoinRoomModal.tsx  Navbar.css  Navbar.tsx  SpaceBackground.css  SpaceBackground.tsx  SpaceShooterGame.css  SpaceShooterGame.tsx  SuccessModal.css  SuccessModal.tsx  WalletStatus.css  WalletStatus.tsx
frontend/src/contexts/: WalletContext.tsx
frontend/src/contracts/: client.ts  config.ts
frontend/src/pages/: Collection.css  Collection.tsx  Events.css  Events.tsx  Game.css  Game.tsx  History.css  History.tsx  Home.css  Home.tsx  Leaderboard.css  Leaderboard.tsx  Missions.css  Missions.tsx  NewYear2026Event.css  NewYear2026Event.tsx  Profile.css  Profile.tsx  Room.css  Room.tsx  SpaceExplorerS1Event.css  SpaceExplorerS1Event.tsx  SpecialLaunchEvent.css  SpecialLaunchEvent.tsx  Store.css  Store.tsx  WalletGuide.css  WalletGuide.tsx
frontend/src/utils/: freighterCheck.ts  missionTracker.ts  pfpContract.ts  socket.ts  stellar.ts  testMissionHelper.ts
scripts/: deploy-scaffold.ps1  deploy-scaffold.sh  deploy.js  generate-client.js  initialize-pfp-contract.ps1
