[workspace]
members = ["contracts/space_stellar_nft", "contracts/space_stellar_pfp"]
resolver = "2"

[workspace.package]
authors = ["Space Stellar Team"]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
soroban-sdk = "23.0.2"
soroban-token-sdk = "23.0.2"
stellar-access = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.5.1" }
stellar-tokens = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.5.1" }
stellar-macros = { git = "https://github.com/OpenZeppelin/stellar-contracts", tag = "v0.5.1" }

[profile.release]
opt-level = "z"
debug = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
overflow-checks = true
strip = true

[profile.release-with-logs]
debug-assertions = true
inherits = "release"


