[package]
name = "space_stellar_nft"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
stellar-access = { workspace = true }
stellar-tokens = { workspace = true }
stellar-macros = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }


